--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,12 @@ friends:
   友情链接6: http://localhost:4000/
 
 aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+
+# Yulia 自定义内容
+
+# 文章版权说明，默认开启，关闭将 enable 设置为 false
+post_copyright:
+  enable: true
+  license: CC BY-NC-SA 3.0
+  license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
+  
