--- a/_config.yml
+++ b/_config.yml
@@ -118,8 +118,10 @@ slider:
 #  friends: false
 smart_menu:
   innerArchive: '文章'
+  category: '分类'
   friends: '友链'
   aboutme: '关于'
+  
 
 friends:
   友情链接1: http://localhost:4000/
