--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme: 知足且上进，<br>温柔而坚定。<br><br>心怀浪漫宇宙，<br>也珍惜人间日常。<br><br> 愿你活成自己喜欢的模样。<br>谢谢大家
 
 
 # -———————— 以下为添加的自定义功能 —————————
