--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,9 @@ aboutme: 知足且上进，<br>温柔而坚定。<br><br>心怀浪漫宇宙，<b
 # -———————— 以下为添加的自定义功能 —————————
 # Yulia 自定义内容
 
+# 开启百度站长平台自动推送（https://ziyuan.baidu.com/linksubmit/index）
+baidu_push_auto: false
+  
 # 文章版权说明，默认开启，关闭将 enable 设置为 false
 post_copyright:
   enable: true
