--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ mathjax: false
 open_in_new: false
 
 # 打赏
-# 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
+# 打赏type设定：0-关闭打赏; 1-文章对应的.md文件里有 reward:true 属性，才有打赏; 2-所有文章均有打赏.
 reward_type: 2
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
@@ -54,9 +54,9 @@ alipay:
 weixin: 
 
 # 目录
-# 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
-toc: 1
-# 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
+# 目录设定：0-不显示目录; 1-文章对应的.md文件里有 toc:true 属性，才有目录; 2-所有文章均显示目录
+toc: 2
+# 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为 true 即可隐藏 hexo 重复的序号；否则置为 false
 toc_hide_index: true
 # 目录为空时的提示
 toc_empty_wording: '目录，不存在的…'
@@ -67,37 +67,37 @@ top: true
 # Miscellaneous
 baidu_analytics: ''
 google_analytics: ''
+
+# 网站图标 url
 favicon: /favicon.png
 
-#你的头像url
+# 你的头像 url
 avatar:
 
-#是否开启分享
+# 是否开启分享
 share_jia: true
 
-#评论：1、多说；2、网易云跟帖；3、畅言；4、Disqus；5、Gitment
-#不需要使用某项，直接设置值为false，或注释掉
-#具体请参考wiki：https://github.com/litten/hexo-theme-yilia/wiki/
+# 评论：1. 畅言; 2. Disqus; 3. Gitment; 4. Giteement
+# 不需要使用某项，直接设置值为 false，或注释掉。
+# 具体请参考 wiki：https://github.com/litten/hexo-theme-yilia/wiki/
 
-#1、多说
-duoshuo: false
-
-#2、网易云跟帖
-wangyiyun: false
-
-#3、畅言
+# 1. 畅言
 changyan_appid: false
 changyan_conf: false
 
-#4、Disqus 在 hexo 根目录的 config 里也有 disqus_shortname 字段，优先使用 Yulia 的
+# 2. Disqus：在 hexo 根目录的 config 里也有 disqus_shortname 字段，优先使用 Yulia 的
 disqus: false
 
-#5、Gitment
-gitment_owner: false      #你的 GitHub ID
-gitment_repo: ''          #存储评论的 repo
+# 3. Gitment
+gitment_owner: false        # 你的 GitHub ID
+gitment_accelerate: true    # 是否使用自定义 js 提升访问速度（置为 true 则使用本地 js 加速，置为 false 则使用官网默认 js）
+gitment_repo: ''            # 存储评论的 repo
 gitment_oauth:
-  client_id: ''           #client ID
-  client_secret: ''       #client secret
+  client_id: ''             # client ID
+  client_secret: ''         # client secret
+
+# 4. Giteement
+
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
@@ -112,10 +112,10 @@ slider:
   showTags: false
 
 # 智能菜单
-# 如不需要，将该对应项置为false
+# 如不需要，将该对应项置为 false
 # 比如
-#smart_menu:
-#  friends: false
+# smart_menu:
+#   friends: false
 smart_menu:
   innerArchive: '文章'
   category: '分类'
@@ -134,8 +134,8 @@ friends:
 aboutme: 把人生的全部，<br>奉献给我所热爱的一切。<br><br>谢谢大家 ~
 
 
-# -———————— 以下为添加的自定义功能 —————————
-# Yulia 自定义内容
+# -———————— 以下为 Yulia 添加的自定义功能 —————————
+
 
 # 开启百度站长平台自动推送，有利于 SEO 搜索（https://ziyuan.baidu.com/linksubmit/index）
 baidu_push_auto: false
@@ -143,12 +143,12 @@ baidu_push_auto: false
 # 文章版权说明：默认开启，关闭将 enable 设置为 false。
 post_copyright:
   enable: true
-  # 版权协议
+  # 版权协议名称
   license: CC BY-NC-SA 3.0
   # 版权协议地址
   license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
   
-# 网站访问量统计：访客人数统计、访问次数统计
+# 网站访问量统计：访客人数统计、访问次数统计。
 site_count:
   # enable 设置为 false 时不显示网站访问统计。
   enable: false
@@ -186,7 +186,7 @@ clickLove:
   
 # 悬停预览图片效果
 hover_effect:
-  # 'global' 0: 分开设置, 1: 全局启用, 2: 全局关闭
+  # 'global' 0: 分开设置; 1: 全局启用, 2: 全局关闭
   global: 1
   # subNav - 导航栏悬停预览图片效果
   subNav: true
