--- a/_config.yml
+++ b/_config.yml
@@ -77,27 +77,37 @@ avatar:
 # 是否开启分享
 share_jia: true
 
-# 评论：1. 畅言; 2. Disqus; 3. Gitment; 4. Giteement
+# 评论：1. 畅言云评; 2. Disqus; 3. Gitment; 4. Giteement
 # 不需要使用某项，直接设置值为 false，或注释掉。
 # 具体请参考 wiki：https://github.com/litten/hexo-theme-yilia/wiki/
 
-# 1. 畅言
+# 1. 畅言云评
 changyan_appid: false
 changyan_conf: false
 
-# 2. Disqus：在 hexo 根目录的 config 里也有 disqus_shortname 字段，优先使用 Yulia 的
+# 2. Disqus 评论：在 hexo 根目录的 config 里也有 disqus_shortname 字段，优先使用 Yulia 的
 disqus: false
 
-# 3. Gitment
-gitment_owner: false        # 你的 GitHub ID
-gitment_accelerate: true    # 是否使用自定义 js 提升访问速度（置为 true 则使用本地 js 加速，置为 false 则使用官网默认 js）
-gitment_repo: ''            # 存储评论的 repo
-gitment_oauth:
-  client_id: ''             # client ID
-  client_secret: ''         # client secret
+# 3. Gitment 评论
+gitment:
+  enable: false            # 是否启用 Gitment 评论系统
+  owner: ''                # 你的 GitHub ID
+  repo: ''                 # 存储评论的 GitHub Repo
+  oauth_client_id: ''      # client ID
+  oauth_client_secret: ''  # client secret
+  accelerate: true         # 是否使用自定义 js 提升访问速度（置为 true 则使用本地 js 加速，置为 false 则使用官网默认 js）
 
-# 4. Giteement
-
+# 4. Giteement 评论
+giteement:
+  enable: false            # 是否启用码云评论系统
+  owner: ''                # 你的码云账号英文名
+  repo: ''                 # 存储评论的 码云 Repo
+  oauth_client_id: ''      # client ID
+  oauth_client_secret: ''  # client secret
+  backcall_uri: ''         # 应用回调地址（请和配置的第三方应用保持一致）
+  accelerate: true         # 是否使用自定义 js 提升访问速度（置为 true 则使用本地 js 加速，置为 false 则使用官网默认 js）
+  
+    
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
